# nastachku

./: .gitignore  README.md  settings.gradle.kts
buildSrc/: settings.gradle.kts
buildSrc/src/main/kotlin/com/example/gradle/: LocalProperties.kt
external-build-plugin/: build.gradle.kts  settings.gradle.kts
external-build-plugin/src/main/kotlin/com/example/gradle/: ExternalBuildExtension.kt  ExternalBuildPlugin.kt  ExternalBuildTask.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hellostachka-lib/: .bazelrc  MODULE.bazel
hellostachka-lib/cpp/: BUILD.bazel  hello_stachka.cpp  hello_stachka.h
icons/: build.gradle.kts
jnigenerator/: .gitignore
jnigenerator/cpp/: jni_generator_native_essential.cpp  jni_generator_native_essential.h
jnigenerator/java/annotations/: build.gradle.kts
jnigenerator/python/: generate_jni_sources.py  sources_list.py
jnigenerator/python/gen_script/: build_utils.py  jni_generator.py
jnihellostachka/: .gitignore  build.gradle.kts
jnihellostachka/src/main/cpp/: CMakeLists.txt  jni_hello_stachka.cpp
jnihellostachka/src/main/java/com/example/jnihellostachka/: IHelloStachka.kt  JniHelloStachka.java
libloader/: build.gradle.kts
libloader/src/androidTest/java/com/example/libloader/: ExampleInstrumentedTest.kt
libloader/src/main/java/com/example/libloader/: LibLoader.kt
libloader/src/test/java/com/example/libloader/: ExampleUnitTest.kt
logging/: build.gradle.kts
logging/src/main/java/com/example/logging/: Logging.kt
simple-jni/: .gitignore  build.gradle.kts
simple-jni/src/main/: AndroidManifest.xml
simple-jni/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  hello_stachka.cpp
simple-jni/src/main/res/drawable/: stachka.xml
simple-jni/src/main/res/values/: colors.xml  strings.xml  themes.xml
simple-jni/src/main/res/values-night/: themes.xml
theme/: build.gradle.kts
(+10 files in other folders)
